packages/wasm-guest/tests/macro_error/synchronous_function.stderr
error: `workflow` functions should be async
 --> tests/macro_error/synchronous_function.rs:4:1
  |
4 | fn counter() {}
  | ^^^^^^^^^^^^
