packages/wasm-guest/tests/macro_error/synchronous_function.rs
use serpent_automation_wasm_guest::workflow;

#[workflow]
fn counter() {}

fn main() {}
